# CGame

./: .gitignore  CMakeLists.txt  README.md  build.bat
docs/: Cheatsheet.md  GettingStarted.md  old.txt  potential-improvements.txt
include/: entity.hpp  entity_type.hpp  game.hpp  level.hpp  line.hpp  rigidbody.hpp  scene.hpp  scene_manager.hpp  smallmath.hpp  smath.h  vertex.hpp
include/demos/: cgol.WIP  cgol.hpp
include/shapes/: box.hpp  ellipse.hpp  ngon.hpp  rectangle.hpp  shape.hpp  tile.hpp  tilemap.hpp
include/ui/: gui_CGOLMenu.h  gui_cgol_ui.h
lib/raygui/: raygui.h
lib/raylib/: CMakeLists.txt  raylib.h.gch
src/: Entity.cpp  Game.cpp  Game.old  ILevel.cpp  Line.cpp  Main.cpp  Rigidbody.cpp  Scene.cpp  SceneManager.cpp  Smallmath.cpp  Vertex.cpp  source.cpp
src/demos/: Cgol.WIP  Cgol.cpp
src/headers/: game.h
src/includes/: game.cpp  source.cpp
src/shapes/: Box.cpp  Ellipse.cpp  Ngon.cpp  Rect.cpp  Tile.cpp  Tilemap.cpp
